--- a/about.html
+++ b/about.html
@@ -545,8 +545,8 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.html">首頁</a></li>
-                    <li><a href="about.html">關於我們</a></li>
+                    <li><a href="https://obo-dejia.github.io/demo">首頁</a></li>
+                    <li><a href="https://obo-dejia.github.io/demo/about.html">關於我們</a></li>
                     <li><a href="products.html">商品介紹</a></li>
                     <li><a href="portfolio.html">作品集</a></li>
                     <li><a href="contact.html">聯絡我們</a></li>
@@ -774,8 +774,8 @@
                 <div class="footer-item">
                     <h4>快速連結</h4>
                     <ul style="list-style: none;">
-                        <li style="margin-bottom: 15px;"><a href="index.html">首頁</a></li>
-                        <li style="margin-bottom: 15px;"><a href="about.html">關於我們</a></li>
+                        <li style="margin-bottom: 15px;"><a href="https://obo-dejia.github.io/demo">首頁</a></li>
+                        <li style="margin-bottom: 15px;"><a href="https://obo-dejia.github.io/demo/about.html">關於我們</a></li>
                         <li style="margin-bottom: 15px;"><a href="products.html">商品介紹</a></li>
                         <li style="margin-bottom: 15px;"><a href="portfolio.html">作品集</a></li>
                         <li style="margin-bottom: 15px;"><a href="contact.html">聯絡我們</a></li>
