--- a/index.html
+++ b/index.html
@@ -781,8 +781,8 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#home">首頁</a></li>
-                    <li><a href="/about.html">關於我們</a></li>
+                    <li><a href="https://obo-dejia.github.io/demo">首頁</a></li>
+                    <li><a href="https://obo-dejia.github.io/demo/about.html">關於我們</a></li>
                     <li><a href="#services">商品介紹</a></li>
                     <li><a href="#portfolio">作品集</a></li>
                     <li><a href="#contact">聯絡我們</a></li>
@@ -1036,8 +1036,8 @@
         <div class="footer-item footer-links">
             <h4>快速連結</h4>
             <ul>
-                <li><a href="#home">首頁</a></li>
-                <li><a href="#about">關於我們</a></li>
+                <li><a href="https://obo-dejia.github.io/demo">首頁</a></li>
+                <li><a href="https://obo-dejia.github.io/demo/about.html">關於我們</a></li>
                 <li><a href="#services">商品介紹</a></li>
                 <li><a href="#portfolio">作品集</a></li>
                 <li><a href="#contact">聯絡我們</a></li>
