--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>關於我們 - 耀陽門窗</title>
+    <title>關於我們 - 明富鋁門窗</title>
     <style>
         /* 基礎樣式 */
         * {
