--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>耀陽門窗 - 專業鋁門窗安裝設計</title>
+    <title>明富鋁門窗 - 專業鋁門窗安裝設計</title>
     <style>
         /* 基礎樣式 */
         * {
